--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "peeracle",
   "version": "0.0.1",
-  "description": "Peer-to-peer on-demand multimedia streaming",
+  "description": "Peeracle Javascript Library",
   "main": "peeracle.js",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/jasmine/bin/jasmine.js",
-    "lint": "eslint lib/*.js"
+    "lint": "eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,17 @@
   "homepage": "https://github.com/peeracle/peeracle",
   "devDependencies": {
     "eslint": "^0.15.1",
-    "jasmine": "^2.2.1"
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-karma": "^0.10.1",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-opera-launcher": "^0.1.0"
   },
   "dependencies": {
     "wrtc": "0.0.49"
