--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "peeracle",
   "version": "0.0.1",
   "description": "Peeracle Javascript Library",
-  "main": "peeracle.js",
+  "main": "src/peeracle.js",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/jasmine/bin/jasmine.js",
     "lint": "eslint src/*.js"
