--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
   "devDependencies": {
     "eslint": "^0.15.1",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-karma": "^0.10.1",
+    "grunt-preprocess": "^4.1.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
