--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,9 @@
     "**/.*",
     "node_modules",
     "bower_components",
+    "docs",
     "test",
-    "tests"
+    "tests",
+    "spec"
   ]
 }
