--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "karma-opera-launcher": "^0.1.0"
   },
   "dependencies": {
+    "commander": "^2.7.1",
     "websocket": "^1.0.17",
     "wrtc": "0.0.49"
   }
