--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "no-underscore-dangle": 0,
     "no-extend-native": 2,
     "no-mixed-spaces-and-tabs": 2,
+    "no-shadow": 1,
     "no-trailing-spaces": 2,
     "no-use-before-define": [2, "nofunc"],
     "no-unused-vars": 1,
