--- a/package.json
+++ b/package.json
@@ -47,7 +47,12 @@
   },
   "dependencies": {
     "commander": "^2.7.1",
+    "event-target": "^0.1.0",
+    "observatory": "^0.1.1",
     "websocket": "^1.0.17",
-    "wrtc": "0.0.49"
+    "winston": "^1.0.0",
+    "wrtc": "0.0.49",
+    "xhr2": "^0.1.2",
+    "xmlhttprequest": "^1.7.0"
   }
 }
