--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
     "karma-opera-launcher": "^0.1.0",
-    "karma-sauce-launcher": "^0.2.10"
+    "karma-sauce-launcher": "^0.2.10",
+    "karma-verbose-reporter": "0.0.2"
   },
   "dependencies": {
     "commander": "^2.7.1",
