--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Peeracle Javascript Library",
   "main": "peeracle.js",
   "scripts": {
-    "test": "NODE_ENV=test istanbul cover --include-all-sources jasmine-node spec",
+    "test": "NODE_ENV=test istanbul cover --include-all-sources jasmine",
     "lint": "eslint src/*.js"
   },
   "repository": {
