--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libncurses5-dev libssl-dev libnss3-dev libexpat-dev
   - npm install -g grunt-cli
-  - npm install -g jasmine-node
+  - npm install -g jasmine
   - npm install -g istanbul
 install:
   - npm install
