--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.3.1",
+    "karma-express-http-server": "0.0.1",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
